2019-01-02  PanderMusubi  <pander@users.sourceforge.net>

	[BZ #24011]
	* localedata/locales/bs_BA (LC_TELEPHONE): Fix a typo in comment.

2019-01-02  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/nofpu/libm-test-ulps: Update.

2019-01-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/htl/pt-barrierattr-setpshared.c
	(pthread_barrierattr_setpshared): Add stub warning.
	* sysdeps/htl/pt-condattr-setpshared.c
	(pthread_condattr_setpshared): Likewise.
	* sysdeps/htl/pt-mutexattr-setpshared.c
	(pthread_mutexattr_setpshared): Likewise.
	* sysdeps/htl/pt-rwlockattr-setpshared.c
	(pthread_rwlockattr_setpshared): Likewise.
	* sysdeps/mach/hurd/htl/pt-mutexattr-setpshared.c
	(pthread_mutexattr_setpshared): Likewise.

2019-01-02  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/tst-mman-consts.py (main): Expect
	constants to match with Linux 4.20.

	* sysdeps/mips/mips32/libm-test-ulps: Update.
	* sysdeps/mips/mips64/libm-test-ulps: Likewise.

2019-01-02  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #24034]
	* sysdeps/unix/sysv/linux/arm/atomic-machine.h
	(__arm_assisted_compare_and_exchange_val_32_acq): Use uint32_t rather
	than __typeof (...) for the a_ptr variable.

2019-01-02  Gabriel F. T. Gomes  <gabriel@inconstante.eti.br>

	* debug/sprintf_chk.c (___sprintf_chk): Use PRINTF_CHK.
	* debug/vsprintf_chk.c (___vsprintf_chk): Likewise.
	* libio/Makefile (tests): Add tst-sprintf-ub and
	tst-sprintf-chk-ub.
	(CFLAGS-tst-sprintf-ub.c): New variable.
	(CFLAGS-tst-sprintf-chk-ub.c): Likewise.
	* libio/iovsprintf.c (__vsprintf_internal): Only erase the
	destination buffer and check for overflows in fortified mode.
	* libio/libioP.h (PRINTF_CHK): New macro.
	* libio/tst-sprintf-chk-ub.c: New file.
	* libio/tst-sprintf-ub.c: Likewise.

2019-01-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #24018]
	* intl/dcigettext.c (DCIGETTEXT): Do not return NULL on asprintf
	failure.

2019-01-02  Florian Weimer  <fweimer@redhat.com>
