@@ -203,9 +203,9 @@ struct termios
 # define EXTPROC 0x00010000
 #endif
 
-# if defined __USE_GNU
+#ifdef __USE_MISC
 /* ioctl (fd, TIOCSERGETLSR, &result) where result may be as below */
-#define TIOCSER_TEMT    0x01	/* Transmitter physically empty */
+# define TIOCSER_TEMT    0x01	/* Transmitter physically empty */
 #endif
 
 /* tcflow() and TCXONC use these */
